add Dockerfile and clear error