@@ -11,4 +11,4 @@ if [ ! -f "$JAR" ]; then
   JAR=$(ls target/traffic-demo-*-web-assembly.jar)
 fi
 
-exec "$JAVA" $JAVA_OPTS -jar $JAR "$@"
+exec "$JAVA" $JAVA_OPTS -Dsun.misc.URLClassPath.disableJarChecking=true --add-opens jdk.naming.rmi/com.sun.jndi.rmi.registry=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.security.action=ALL-UNNAMED --add-opens java.base/sun.net=ALL-UNNAMED -jar $JAR "$@"
